2005-06-27  Sven Neumann  <sven@gimp.org>

	* app/config/gimpconfig-dump.c (dump_gimprc_manpage): don't dump
	properties that have the GIMP_CONFIG_PARAM_IGNORE flag set.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.def: added gimp_get_color_configuration.

2005-06-25  Karine Delvare  <kdelvare@nerim.net>

	* plug-ins/FractalExplorer/FractalExplorer.c: Add an apply button
	and remove the frame around the scrolled window.

2005-06-26  Manish Singh  <yosh@gimp.org>

	* libgimp/gimpgimprc.c (gimp_get_color_configuration): cast to
	GIMP_CONFIG() for gimp_config_deserialize_string().

2005-06-26  Sven Neumann  <sven@gimp.org>

	* data/tips/Makefile.am
	* data/tips/fortunes.xsl: let the transformation work on the
	multi-language XML file and pass a language parameter to it.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: use dgettext() instead of
	gettext() and try to obtain the translation domain from the type.
	Fixes i18n of tooltips on property widgets (bug #307756).

	* libgimpconfig/gimpcolorconfig.c: set a translation domain.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: added tooltips with more information on
	the used profiles.

2005-06-26  Tor Lillqvist  <tml@novell.com>

	* app/tools/gimppainttool.c (gimp_paint_tool_draw): Store the
	GimpBrushCore::brush_bound_segs as sorted (the result of
	sort_boundary), as the only place where it is used
	(gimp_draw_tool_draw_boundary()) would sort it each time it is
	called anyway.

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary):
	Correspondingly we now don't have to sort the boundary here.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/gimprc.pdb: allow to access (read-only) the
	current color management configuration through the PDB.

	* libgimp/gimpgimprc_pdb.[ch]
	* app/pdb/gimprc_cmds.c
	* app/pdb/internal_procs.c: regenerated.

	* libgimp/Makefile.am
	* libgimp/gimp.h